fix toolbar button spacing customer basket page

--- a/eksi/src/app/customer-pages/customer-home-page/home.component.css
+++ b/eksi/src/app/customer-pages/customer-home-page/home.component.css
@@ -3,3 +3,6 @@ table {
   width: 100%;
 }
 
+.bottom-toolbar .mat-raised-button {
+  margin-right: 5px;
+}
